--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "axios": "^0.18.0",
+    "echarts": "^4.2.1",
     "iview": "^3.4.1",
     "vue": "^2.5.2",
     "vue-axios": "^2.1.4",
