--- a/package.json
+++ b/package.json
@@ -11,10 +11,13 @@
   },
   "dependencies": {
     "axios": "^0.18.0",
+    "echarts": "^4.9.0",
     "view-design": "^4.0.0",
     "vue": "^2.5.2",
     "vue-axios": "^2.1.4",
+    "vue-count-to": "^1.0.13",
     "vue-router": "^3.0.1",
+    "vue-video-player": "^5.0.2",
     "vuex": "^3.1.1",
     "wangeditor": "^3.1.1"
   },
